--- a/gleam.toml
+++ b/gleam.toml
@@ -16,5 +16,5 @@ version = "1.0.0"
 gleam_stdlib = "~> 0.34 or ~> 1.0"
 
 [dev-dependencies]
-gleeunit = "~> 1.0"
 gleamy_bench = "~> 0.4"
+showtime = "~> 0.3"
