Prepare publishing stuff

--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,9 @@
 name = "glib"
-version = "1.0.0"
+version = "0.1.0"
+description = "A collection of Gleam utilities"
+licences = ["Apache-2.0"]
+repository = { type = "github", user = "pendletong", repo = "glib" }
+
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
